--- a/Shared/_LayoutYeniMisafir.cshtml
+++ b/Shared/_LayoutYeniMisafir.cshtml
@@ -77,7 +77,7 @@
 <!--Head-->
 <head>
     <meta charset="utf-8" />
-    <title>@Resources.Resource.lblYeniHesap</title>
+    <title>@Resources.Resource.lblBulutDersCom</title>
 
     <meta name="description" content="register page" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -118,7 +118,7 @@
             <div class="row">
                
                 <div class="col-lg-4 col-sm-12 col-xs-12" style=" float: none;margin: 0 auto;padding-top: 15px; text-align: center">
-                 <a href="@Href("~/Hesap/Giris")"> <img src="@Href("~/Images/logo2.png")"</a><br>
+                 <a href="@Href("~/Hesap/Giris")"> <img src="@Href("~/Images/logo2.png")"></a><br>
                 </div>
             </div>
             <div class="row">
