--- a/Web/Default.cshtml
+++ b/Web/Default.cshtml
@@ -40,7 +40,7 @@
 		<div class="container-fluid">
 			
 			<div class="nav-header">
-				<a class="navbar-brand" href="#"><img src="@Href("~/Images/logo_tr.png")" alt="AzureBoard"></a>
+				<a class="navbar-brand" href="@Href("~/Web/")"><img src="@Href("~/Images/logo_tr.png")" alt="AzureBoard"></a>
 				<a class="nav-handle" data-nav=".nav"><i class="fa fa-bars"></i></a>	
 			</div>
 			
@@ -51,8 +51,8 @@
 					<li><a href="#contact">İletişim</a></li>
 				</ul>
 				<div class="nav-other">
-                    <a href="@Href("~/Hesap/Giris")" class="btn btn-default btn-sm"><i class="fa fa-lock"></i> Giriş</a>
-					<a href="@Href("~/Hesap/YeniEgitmen")" class="btn btn-primary btn-sm"><i class="fa fa-user"></i> Yeni Hesap</a>
+                    <a href="@Href("~/Hesap/Giris")" class="btn btn-default btn-sm" target="_blank"><i class="fa fa-lock"></i> Giriş</a>
+					<a href="@Href("~/Hesap/YeniEgitmen")" class="btn btn-primary btn-sm" target="_blank"><i class="fa fa-user"></i> Yeni Hesap</a>
                 </div>
 			</div>
 			
@@ -67,9 +67,9 @@
 			<div class="info-wrp cm-item">
 				<h2 class="main-text">Dersler Bulutta...</h2>
 				<p class="sub-text">Derslerin için web sayfalarını bulutta oluştur, dosyaları paylaş, ödevlerini yönet...</p>
-			    <a href="@Href("~/Hesap/Yeni")" class="btn btn-default btn2">Yeni Öğrenci Hesabı</a>
-                <a href="@Href("~/Hesap/YeniEgitmen")" class="btn btn-default btn2">Yeni Eğitmen Hesabı</a>
-				<a href="@Href("~/Hesap/Giris")" class="btn btn-default btn2">Giriş</a>
+			    <a href="@Href("~/Hesap/Yeni")" class="btn btn-default btn2" target="_blank">Yeni Öğrenci Hesabı</a>
+                <a href="@Href("~/Hesap/YeniEgitmen")" class="btn btn-default btn2" target="_blank">Yeni Eğitmen Hesabı</a>
+				<a href="@Href("~/Hesap/Giris")" class="btn btn-default btn2" target="_blank">Giriş</a>
 			</div>
 		
 		</div><!-- /.container -->
