--- a/Hesap/ParolamiUnuttum.cshtml
+++ b/Hesap/ParolamiUnuttum.cshtml
@@ -61,17 +61,26 @@
     <div class="col-lg-12 col-sm-12 col-xs-12">
        
              @if (!string.IsNullOrEmpty(mesajEpostaBos))
-        {
-             <p class="alert alert-danger">@mesajEpostaBos</p>
+        {              <div class="alert alert-danger fade in">
+                <button class="close" data-dismiss="alert">×</button>
+                <i class="fa-fw fa fa-times"></i><strong>@Resources.Resource.lblHata</strong> @mesajEpostaBos
+              </div>
         }
 
         @if (!string.IsNullOrEmpty(mesajEpostaKayitliDegil))
-        {
-            <p class="alert alert-danger">@mesajEpostaKayitliDegil</p>
+        {              <div class="alert alert-danger fade in">
+                <button class="close" data-dismiss="alert">×</button>
+                <i class="fa-fw fa fa-times"></i><strong>@Resources.Resource.lblHata</strong> @mesajEpostaKayitliDegil
+              </div>
         }
+
         @if (islemTamam)
           {
-             <p class="alert alert-success">Yeni parolanız girdiğiniz e-posta adresine başarıyla gönderildi</p>  
+              <div class="alert alert-success fade in">
+                <button class="close" data-dismiss="alert">×</button>
+                <i class="fa-fw fa fa-check"></i><strong>İşlem Tamam</strong> Yeni parolanız girdiğiniz e-posta adresine başarıyla gönderildi.
+              </div>
+             
           }
          <div class="widget">
                                                 <div class="widget-header bordered-bottom bordered-blue">
