--- a/Hesap/Yeni.cshtml
+++ b/Hesap/Yeni.cshtml
@@ -78,12 +78,18 @@
     <div class="col-lg-12 col-sm-12 col-xs-12">
            @if (!string.IsNullOrEmpty(mesajEPostaKayitli))
             {
-                <p class="alert alert-danger">@mesajEPostaKayitli</p>
+              <div class="alert alert-danger fade in">
+                <button class="close" data-dismiss="alert">×</button>
+                <i class="fa-fw fa fa-times"></i><strong>@Resources.Resource.lblHata</strong> @mesajEPostaKayitli
+              </div>
             }
 
          @if (!string.IsNullOrEmpty(mesajGuvenlikKoduHatasi))
             {
-                <p class="alert alert-danger">@mesajGuvenlikKoduHatasi</p>
+              <div class="alert alert-danger fade in">
+                <button class="close" data-dismiss="alert">×</button>
+                <i class="fa-fw fa fa-times"></i><strong>@Resources.Resource.lblHata</strong> @mesajGuvenlikKoduHatasi
+              </div>
             }
                                             <div class="widget">
                                                 <div class="widget-header bordered-bottom bordered-blue">
