--- a/Shared/_LayoutYeniMisafir.cshtml
+++ b/Shared/_LayoutYeniMisafir.cshtml
@@ -123,7 +123,7 @@
             </div>
             <div class="row">
                
-                <div class="col-lg-4 col-sm-12 col-xs-12" style=" float: none;margin: 0 auto;padding-top: 25px;">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-8" style=" float: none;margin: 0 auto;padding-top: 25px;">
                      
                  @RenderBody()
                 </div>
