--- a/Hesap/YeniEgitmen.cshtml
+++ b/Hesap/YeniEgitmen.cshtml
@@ -12,6 +12,7 @@
     var mesajDogrulamaKoduHatali="";
     var mesajGuvenlikKoduHatali="";
     var mesajGirilenParolalarUyusmadi="";
+    var mesajGerekliAlanlarBosBirakildi="";
     var returnUrl=Request.QueryString["returnUrl"];
     var db=Database.Open("fb1ae");
    
@@ -39,8 +40,8 @@
         dogrulamaKodu=Request.Form["txtDogrulamaKodu"].Trim();
 
         if (string.IsNullOrEmpty(ad) || string.IsNullOrEmpty(soyad) || string.IsNullOrEmpty(ePosta) || string.IsNullOrEmpty(parola) || string.IsNullOrEmpty(dogrulamaKodu))         {
-             Response.Redirect("~/Shared/HataGenel");
-             Response.End();
+             hataVar=true;
+             mesajGerekliAlanlarBosBirakildi="Ad,soyad,eposta,parola veya abonelik kodu alanları boş bırakılamaz";
          }
         
         if (db.QueryValue("SELECT COUNT(*) FROM Profiles WHERE ePosta=@0",ePosta)!=0)
@@ -87,7 +88,7 @@
 
             WebSecurity.Login(ePosta,parola);
            
-            var queryIslem=db.QueryValue("exec dbo.Genel_AbonelikEkle @0,@1",WebSecurity.CurrentUserId,dogrulamaKodu);
+            var queryIslem=db.QueryValue("exec dbo.Genel_AbonelikEkle @0,@1",ePosta,dogrulamaKodu);
          
 
             db.Close();
@@ -111,13 +112,20 @@
 
 <div class="row">
     <div class="col-lg-12 col-sm-12 col-xs-12">
-                   @if (!string.IsNullOrEmpty(mesajDogrulamaKoduHatali))
+        @if (!string.IsNullOrEmpty(mesajDogrulamaKoduHatali))
                     {
                       <div class="alert alert-danger fade in">
                         <button class="close" data-dismiss="alert">×</button>
                         <i class="fa-fw fa fa-times"></i><strong>@Resources.Resource.lblHata</strong> @mesajDogrulamaKoduHatali
                       </div>
                     }
+         @if (!string.IsNullOrEmpty(mesajGerekliAlanlarBosBirakildi))
+            {
+              <div class="alert alert-danger fade in">
+                <button class="close" data-dismiss="alert">×</button>
+                <i class="fa-fw fa fa-times"></i><strong>@Resources.Resource.lblHata</strong> @mesajGerekliAlanlarBosBirakildi
+              </div>
+            }
 
          @if (!string.IsNullOrEmpty(mesajGirilenParolalarUyusmadi))
             {
@@ -149,7 +157,7 @@
                                                 </div>
                            <div class="widget-body">
                                                     <div id="registration-form">
-                                                        <form role="form" method="post" action="#">
+                                                        <form  method="post" action="#">
                                                             <div class="form-title">
                                                                Kullanıcı Bilgileri
                                                             </div>
@@ -204,7 +212,7 @@
                                                             <div class="form-group">
                                                                 @ReCaptcha.GetHtml("6LdM5hwTAAAAAG7LVuSifeauuY5FR3vOXrXtZcz9", theme: "white",language:"tr")
                                                             </div>
-                                                            <button type="submit" class="btn btn-primary" id="btnHesapOlustur" >@Resources.Resource.lblHesabiOlustur</button>
+                                                            <button type="submit" class="btn btn-primary">@Resources.Resource.lblHesabiOlustur</button>
                                                         </form>
                                                     </div>
                                                 </div>
