--- a/Ajax/Odev/OdevVer.cshtml
+++ b/Ajax/Odev/OdevVer.cshtml
@@ -50,7 +50,7 @@
         
         var queryEpostaMesaji=db.QuerySingle("SELECT * FROM epostamesajlari WHERE ID=3");
 
-        var epostaMesaji=string.Format(queryEpostaMesaji.mesaj_tr,queryKullanici.Ad + " " + queryKullanici.Soyad,queryDers.DersAdi, Genel.BildirimEylemindenMetne(11,"tr"),Aciklama);
+        var epostaMesaji=string.Format(queryEpostaMesaji.mesaj_tr,queryKullanici.Ad + " " + queryKullanici.Soyad,queryDers.DersAdi, Genel.BildirimEylemindenMetne(11,"tr"),Aciklama,"http://bulutders.com/Odev/Goster?OdevID="+ queryEklenenOdev.OdevID.ToString());
 
         WebMail.Send("Undisclosed Recipients <destek@bulutders.com>","BulutDers Bildirim",epostaMesaji ,from:"BulutDers <destek@bulutders.com>", isBodyHtml:true,bcc:ePostalar);
 
