--- a/Ajax/Odev/OdevVer.cshtml
+++ b/Ajax/Odev/OdevVer.cshtml
@@ -33,27 +33,29 @@
         Response.End();   
       }
 
+        //*************Bildirim Maili gönder**********************
+        
         var queryKullanici=db.QuerySingle("SELECT * FROM Profiles WHERE UserID=@0",WebSecurity.CurrentUserId);
         var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0",DersID);
         var queryEmailGonderilecekAdresler=db.Query("(SELECT Ad,Soyad,ePosta FROM DersTakip INNER JOIN Profiles ON DersTakip.UserID=Profiles.UserID WHERE DersTakip.DersID=@0 AND Durum=2 AND Profiles.Aktif=1 AND Profiles.UserID<>@1) UNION (SELECT Ad,Soyad,ePosta FROM Profiles WHERE userID=@2)",DersID,WebSecurity.CurrentUserId,queryDers.UserID);
-        var ePostalar="";
+        
+        List<string> ePostalar=new List<string>();
       
         foreach (var kisi in queryEmailGonderilecekAdresler)
         {
             if (Genel.EmailGecerliMi(kisi.ePosta))
             {
-               ePostalar=ePostalar +  kisi.Ad + " " + kisi.Soyad + "<" + kisi.ePosta+">,";
+                ePostalar.Add(kisi.Ad + " " + kisi.Soyad + "<" + kisi.ePosta+">");
             }
         }
-        
-        ePostalar=ePostalar.TrimEnd(',');
         
         var queryEpostaMesaji=db.QuerySingle("SELECT * FROM epostamesajlari WHERE ID=3");
 
         var epostaMesaji=string.Format(queryEpostaMesaji.mesaj_tr,queryKullanici.Ad + " " + queryKullanici.Soyad,queryDers.DersAdi, Genel.BildirimEylemindenMetne(11,"tr"),Aciklama,"http://bulutders.com/Odev/Goster?OdevID="+ queryEklenenOdev.OdevID.ToString());
 
-        WebMail.Send("Undisclosed Recipients <destek@bulutders.com>","BulutDers Bildirim",epostaMesaji ,from:"BulutDers <destek@bulutders.com>", isBodyHtml:true,bcc:ePostalar);
-
+        SendGridServisi.TopluMailGonder(ePostalar,"BulutDers Bildirim",epostaMesaji);
+        
+        //*********************************************************//
 
       Json.Write(queryEklenenOdev, Response.Output);
       db.Close();   
